updated Galician translation

--- a/po/wesnoth-aoi/gl.po
+++ b/po/wesnoth-aoi/gl.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-02-25 15:51+0100\n"
-"PO-Revision-Date: 2012-03-25 11:53+0200\n"
+"PO-Revision-Date: 2012-04-29 21:12+0200\n"
 "Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
@@ -258,7 +258,7 @@ msgid ""
 "mothers use to scare the children."
 msgstr ""
 "Orcos? Non o creo. O rei dos humanos, Haldric, acabou con eles en canto "
-"desembarcaron nestas costas. Dende entón non apareceron máis que en contos "
+"desembarcaron nestas costas. Desde entón non apareceron máis que en contos "
 "para asustar aos nenos."
 
 #. [message]: id=Lomarfel
@@ -272,7 +272,7 @@ msgstr ""
 "Iso parecía, señor, pero alí os están, pinchando árbores frondosas por "
 "ducias e facendo enormes fogueiras coa madeira, pisando a herba ata que só "
 "queda barro, e nin se molestan en soterrar as súas noxentas bostas! Creo que "
-"ata podo cheirar o seu fedor dende aquí."
+"ata podo cheirar o seu fedor desde aquí."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:141
@@ -298,7 +298,7 @@ msgid ""
 "use your arrows and the day will be ours."
 msgstr ""
 "Miren para eles. Grandes, lentos, torpes e case sen arcos. Unha chuvia de "
-"frechas dende o bosque e acabaremos con eles antes do solpor."
+"frechas desde o bosque e acabaremos con eles antes do solpor."
 
 #. [message]: race=elf
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:171
@@ -393,7 +393,7 @@ msgstr ""
 msgid ""
 "Rualsha? Hmm... What if... Assemble a war-party, we need to scout north!"
 msgstr ""
-"Rualsa? Hmm… A ver se vai ser que… Soldados, reúnan unha partida de guerra, "
+"Rualsa? Hm… A ver se vai ser que… Soldados, reúnan unha partida de guerra, "
 "temos que ir explorar as terras do norte."
 
 #. [scenario]: id=02_Assassins
@@ -438,7 +438,7 @@ msgstr ""
 "Consello:\n"
 "É difícil atinarlle aos asasinos, e o seu veleno é insidioso. Permanece "
 "preto das vilas, nas que se pode curar o envelenamento, e forza aos inimigos "
-"a atacar dende o río."
+"a atacar desde o río."
 
 #. [objective]: condition=win
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:93
@@ -898,7 +898,7 @@ msgid ""
 "an invasion, I’m sure of it. We must gather more information about his plans "
 "before we go back."
 msgstr ""
-"Sábeo ben… Rualsa. Fósemos onde fósemos, ese nome sempre se repetiu, dende "
+"Sábeo ben… Rualsa. Fósemos onde fósemos, ese nome sempre se repetiu, desde "
 "que comezaron as incursións. Ese orco é moito máis ca un simple saqueador en "
 "busca de botín. E quere estas terras. As <i>nosas</i> terras. Está planeando "
 "unha invasión, estou seguro. Debemos conseguir máis información sobre os "
@@ -1110,7 +1110,7 @@ msgid ""
 "Erlornas surveyed the siege from atop a small tree-covered hill overlooking "
 "the tower valley..."
 msgstr ""
-"Erlornas botoulle unha ollada ao asedio dende a cima dun pequeno outeiro "
+"Erlornas botoulle unha ollada ao asedio desde a cima dun pequeno outeiro "
 "arborado pasando por alto o foso da torre…"
 
 #. [side]: type=Orcish Warlord, id=Krughnar
@@ -1175,7 +1175,7 @@ msgid ""
 msgstr ""
 "Que os humanos incumpran os tratados non me sorprende, pero… estas terras "
 "parécenme frías e baldías de máis para eles. Que clase de humanos quererían "
-"vivir aquí, afastados do resto dos da súa especie? Hmm…"
+"vivir aquí, afastados do resto dos da súa especie? Hm…"
 
 #. [message]: role=Advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:162
@@ -1435,8 +1435,8 @@ msgid ""
 "sneak through the forest and mount a surprise attack from the north."
 msgstr ""
 "Consello:\n"
-"O inimigo está ben defendido contra os ataques dende o sur. Usa silvanos "
-"para coarte polo bosque e montar un ataque sorpresa dende o norte."
+"O inimigo está ben defendido contra os ataques desde o sur. Usa silvanos "
+"para coarte polo bosque e montar un ataque sorpresa desde o norte."
 
 #. [objective]: condition=win
 #: data/campaigns/An_Orcish_Incursion/scenarios/07_Showdown.cfg:117
