--- a/po/wesnoth-did/gl.po
+++ b/po/wesnoth-did/gl.po
@@ -8,23 +8,23 @@
 # Fran Diéguez <fran dot dieguez at glug dot es>, 2008.
 # Adrián Chaves Fernández <adriyetichaves@gmail.com>, 2010.
 # Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail.com>, 2011.
-# Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail.com>, 2011.
+# Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail.com>, 2011, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: gl_ES\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-10-07 22:09+0200\n"
-"PO-Revision-Date: 2011-09-12 11:59+0200\n"
-"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
-"com>\n"
+"POT-Creation-Date: 2012-04-07 12:14+0200\n"
+"PO-Revision-Date: 2012-04-29 21:12+0200\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "com>\n"
+"com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 1.2\n"
+"X-Generator: Lokalize 1.4\n"
 
 #. [scenario]: id=11_Descent_into_Darkness, id=Mal Keshar
 #. [campaign]: id=Descent_into_Darkness
@@ -118,7 +118,7 @@ msgstr ""
 "Malin Quesar naceu dez anos despois da morte de Haldric IV. Criado na vila "
 "de Parcin, na fronteira norte, era o maior dos dous fillos do barón da "
 "cidade. Cada verán, cando os pasos da montaña se abrían, os orcos baixaban "
-"dende o norte para demostrar as súas habilidades na batalla. Cada ano os "
+"desde o norte para demostrar as súas habilidades na batalla. Cada ano os "
 "gardas de Parcin reprimían as incursións, aínda que sempre había algunha "
 "baixa entre os aldeáns. O pai de Malin dirixía as partidas para desbaratar "
 "os campamentos dos orcos e envialos de volta ao norte."
@@ -553,7 +553,7 @@ msgid ""
 "asks Malin to travel with him. As the weeks pass, he teaches Malin more dark "
 "magic."
 msgstr ""
-"Tras tres días de viaxe dende Parcin, Malin topouse con Vol “O escuro”, o "
+"Tras tres días de viaxe desde Parcin, Malin topouse con Vol “O escuro”, o "
 "nigromante que salvara Parcin e lle aprendera a Malin a erguer aos mortos. O "
 "nigromante compadeceuse do rapaz e da situación na que se atopada, e "
 "pediulle que o acompañase na súa viaxe. Co transcurso dos días, o nigromante "
@@ -1089,7 +1089,7 @@ msgid ""
 "into the dust. The attacks on Parthyn will stop here and now. When I bring "
 "word of your demise the town will cheer my triumphant return."
 msgstr ""
-"Levades acosándonos aos humanos cada dous por tres dende os albores do Reino "
+"Levades acosándonos aos humanos cada dous por tres desde os albores do Reino "
 "de Wesnoth. Asaltastes a miña vila sempre que puidestes. Asoballastes os "
 "nosos campos, masacrastes o noso gando. Trouxestes a guerra a unha terra de "
 "paz. Matastes sen remordementos, despoxastes a beleza de todo o que a tiña. "
@@ -1112,7 +1112,7 @@ msgstr ""
 #. [message]: speaker=P'Gareth
 #: data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg:205
 msgid "Ummm... unless... you are already dead, like the skeletons?"
-msgstr "Hmm… a non ser que… E se xa está morto, coma os esqueletos?"
+msgstr "Hm… a non ser que… E se xa está morto, coma os esqueletos?"
 
 #. [message]: speaker=K'Vark
 #: data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg:209
@@ -1260,7 +1260,7 @@ msgid ""
 "victory! But how did they get north of the river? Let my forces be and I "
 "will deal with them."
 msgstr ""
-"Levo perseguindo a ese grupo dende que fuxiron do campo de batalla tras a "
+"Levo perseguindo a ese grupo desde que fuxiron do campo de batalla tras a "
 "miña gran vitoria! Como chegarían á outra beira do río? Deixade que eu e "
 "mailas miñas forzas nos encarguemos deles."
 
@@ -1275,7 +1275,7 @@ msgstr ""
 "Bonita historia. Paréceme a min que o que pasou en realidade é que "
 "trouxeches aquí aos teus aliados os orcos para vingarte da cidade. En canto "
 "baixemos a garda, os teus non mortos non dubidarán en atacarnos. Coñézote "
-"dende que eras moi novo, e nunca pensei que te foses converter nun traidor."
+"desde que eras moi novo, e nunca pensei que te foses converter nun traidor."
 
 #. [message]: role=advisor
 #: data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg:228
@@ -1357,7 +1357,7 @@ msgid ""
 "they said, and expelled me from the Academy."
 msgstr ""
 "Deuses da escuridade, como se chegou a esta situación? A miña propia irmá "
-"decidida a matarme. Nada marchou como debera dende… dende o día que o sapo "
+"decidida a matarme. Nada marchou como debera desde… desde o día que o sapo "
 "graxento de Cefrin se burlou do meu acento nórdico, perdín os estribos e o "
 "maldicín con carafunchos. «<i>Unha maldición de por vida vai máis alá dunha "
 "broma</i>», dixeron. «<i>Pouco xuízo</i>», dixeron, e expulsáronme da "
@@ -1886,7 +1886,7 @@ msgid ""
 msgstr ""
 "As vosas viaxes por esta rexión non pasaron inadvertidas, nigromantes "
 "estúpidos! Levamos semanas seguíndovos, cunha determinación aínda maior "
-"dende que escoitamos esta mañá os estragos que causastes na boa cidade de "
+"desde que escoitamos esta mañá os estragos que causastes na boa cidade de "
 "Taz."
 
 #. [message]: speaker=Sir Cadaeus
@@ -2175,7 +2175,7 @@ msgid ""
 "from it. I must finish regaining my strength."
 msgstr ""
 "Alí, ao final deste vello camiño, sinto un lugar digno de ser o meu novo "
-"fogar. Dende alí levantarei exércitos. Pero aínda son débil de máis para "
+"fogar. Desde alí levantarei exércitos. Pero aínda son débil de máis para "
 "eliminar del as criaturas que o habitan. Teño que seguir recuperando a miña "
 "forza."
 
@@ -2184,7 +2184,7 @@ msgstr ""
 msgid ""
 "I will need a castle from which to call upon my soldiers. I sense one nearby."
 msgstr ""
-"Precisarei dun castelo dende o que chamar aos meus soldados. Teño a "
+"Precisarei dun castelo desde o que chamar aos meus soldados. Teño a "
 "sensación de que hai un preto de aquí."
 
 #. [message]: speaker=Mal Keshar
@@ -2416,7 +2416,7 @@ msgid ""
 "Trained in swordsmanship as a boy and the magical arts as a young man, Malin "
 "Keshar is talented at both but an expert in neither."
 msgstr ""
-"Adestrado no manexo da espada dende novo e nas artes máxicas logo de mozo, "
+"Adestrado no manexo da espada desde novo e nas artes máxicas logo de mozo, "
 "Malin Quesar ten talento en ambas as dúas técnicas pero non é experto en "
 "ningunha delas."
 
