--- a/po/wesnoth-dw/gl.po
+++ b/po/wesnoth-dw/gl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-02-25 15:51+0100\n"
-"PO-Revision-Date: 2012-03-25 11:54+0200\n"
+"PO-Revision-Date: 2012-04-29 21:12+0200\n"
 "Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
@@ -197,7 +197,7 @@ msgstr ""
 "con cada golpe que asestaba co seu mazo. Os orcos descubriron que aquel "
 "grupo de sirénidos era máis duro do que imaxinaran, e acabaron fuxindo ao "
 "bosque para protexerse das lanzas dos seus invencíbeis inimigos. Tal e como "
-"o rei esperara dende un principio, aquela derrota tardaría en borrarse da "
+"o rei esperara desde un principio, aquela derrota tardaría en borrarse da "
 "memoria dos orcos. Pero conseguila non foi barato: a maior parte do exército "
 "das augas fora destruído, e o propio Laudis fora envelenado cun dardo. Cando "
 "os soldados superviventes regresaron a Ioza, Crelis recibiu entre bágoas a "
@@ -215,7 +215,7 @@ msgid ""
 msgstr ""
 "Cai Crelis considerábase novo de máis para as responsabilidades do reino, "
 "polo que recorreu constantemente ao consello de Silana, unha sacerdotisa que "
-"fora amiga de seu pai e que o mozo coñecía dende moi novo. Ela lamentaba "
+"fora amiga de seu pai e que o mozo coñecía desde moi novo. Ela lamentaba "
 "terribelmente a morte do anterior rei, pero estaba convencida de que, grazas "
 "ao seu sacrificio, Crelis viviría tempos de paz. Por desgraza, a sacerdotisa "
 "estaba equivocada. Do sur das montañas chegou un novo inimigo."
@@ -1109,7 +1109,7 @@ msgid ""
 "Never hesitate to speak your counsel to me, Gwabbo. You have been my right "
 "arm on this journey; your courage and loyalty are well proven."
 msgstr ""
-"O teu consello sempre é benvido, Gabo. Fuches a miña man dereita dende que "
+"O teu consello sempre é benvido, Gabo. Fuches a miña man dereita desde que "
 "partimos, e probaches sobradamente a túa coraxe e valor."
 
 #. [message]: speaker=Cylanna
@@ -1583,7 +1583,7 @@ msgstr "Querida mascota"
 msgid ""
 "Uh oh. There is someone else here. Hey! He is being attacked by a cuttle "
 "fish!"
-msgstr "Hmm… aí hai alguén. E estao atacando un arquiteutis!"
+msgstr "Hm… aí hai alguén. E estao atacando un arquiteutis!"
 
 #. [message]: speaker=Growloff
 #: data/campaigns/Dead_Water/scenarios/06_Uncharted_Islands.cfg:200
