--- a/po/wesnoth-help/gl.po
+++ b/po/wesnoth-help/gl.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-03-25 11:52+0200\n"
+"PO-Revision-Date: 2012-04-29 18:22+0200\n"
 "Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
@@ -234,7 +234,7 @@ msgid ""
 "The time that passes between one <ref>dst=egg text='egg'</ref> laying to the "
 "next."
 msgstr ""
-"O tempo que pasa dende a posta dun <ref>dst=egg text='ovo'</ref> ata a do "
+"O tempo que pasa desde a posta dun <ref>dst=egg text='ovo'</ref> ata a do "
 "seguinte."
 
 #. [topic]: id=world_ocean
@@ -849,9 +849,10 @@ msgstr ""
 "Perlas.\n"
 "          ◦ Corsin. Cidade situada entre os Bosques Grises e o Gran Río.\n"
 "          ◦ Danton. Cidade situada no centro de Wesnoth, ao noroeste de "
-"Güedin.          ◦ Xóuradon. Trátase do posto avanzado máis ao norte do "
-"territorio de Wesnoth, situado á beira do Río Güedin, xusto onde este "
-"desauga no Gran Río.\n"
+"Güedin.\n"
+"          ◦ Xóuradon. Trátase do posto avanzado máis ao norte do territorio "
+"de Wesnoth, situado á beira do Río Güedin, xusto onde este desauga no Gran "
+"Río.\n"
 "          ◦ Forte de Tan. Posto avanzado situado no extremo sur do reino, "
 "controla o paso do Río Edén.\n"
 "          ◦ Taz. Importante cidade ao norte de Danton, á que lle "
@@ -874,7 +875,7 @@ msgstr ""
 "Chaira Central polo sur. Son o fogar dos clans, e onde se crían os mellores "
 "cabalos de todo o reino.\n"
 "          ◦ Lombas de Ismar. Extensión montañosa que se estende cara o sur "
-"dende o Gran Río e ao leste do Río Güedin. A parte norte, a máis próxima ao "
+"desde o Gran Río e ao leste do Río Güedin. A parte norte, a máis próxima ao "
 "Río Güedin, foi moitas veces habitada por xentes de Wesnoth, pero o control "
 "por parte do reino non é doado, e a zona está repleta de bandidos.\n"
 "          ◦ Bosque de Glin. Tamén coñecido coma o Bosque Real, en honor a un "
@@ -1116,9 +1117,9 @@ msgstr ""
 "\n"
 "    • Cidades salientables:\n"
 "          ◦ Báragor. Cidade na que reside o consello dos orcos.\n"
-"          ◦ Bito.\n"
-"          ◦ Borste.\n"
-"          ◦ Castelfran.\n"
+"          ◦ Vito.\n"
+"          ◦ Bosten.\n"
+"          ◦ Castefán.\n"
 "          ◦ Fersi.\n"
 "          ◦ Festo.\n"
 "          ◦ Grisbi.\n"
@@ -1422,7 +1423,7 @@ msgstr ""
 "text='unidades'</ref> para formar un exército. Para recrutar debes ter o "
 "líder (como por exemplo Conrad na campaña <italic>text='O herdeiro ao "
 "trono'</italic>) no hexágono de torre dun <ref>dst='terrain_castle' "
-"text='castelo'</ref>. Entón poderás recrutar, ben accedendo dende o menú "
+"text='castelo'</ref>. Entón poderás recrutar, ben accedendo desde o menú "
 "«<bold>text='Accións'</bold> → <bold>text='Recrutar'</bold>» ben premendo co "
 "botón dereito do rato un hexágono de castelo e escollendo "
 "<bold>text='Recrutar'</bold>. Así abrirase a xanela de recrutamento, na que "
@@ -5145,15 +5146,15 @@ msgstr ""
 "misterio. As lendas falan dun tempo esquecido hai moito no que as súas "
 "xentes comezaron a emerxer de debaixo da terra a través de covas. Non se "
 "sabe nada sobre a súa vida antes da súa chegada, ou das súas razóns para "
-"saír á superficie, pero dende aquela pasaron a ser unha parte fundamental da "
-"historia do continente. Pouco despois da súa emersión dende o mundo "
+"saír á superficie, pero desde aquela pasaron a ser unha parte fundamental da "
+"historia do continente. Pouco despois da súa emersión desde o mundo "
 "subterráneo, os ananos tiveron problemas cos habitantes orixinais da "
 "superficie, os elfos. A orixe da súa disputa perdeuse na historia, pero as "
-"dúas razas loitaron en tres grandes guerras dende aquela, interrompidas por "
+"dúas razas loitaron en tres grandes guerras desde aquela, interrompidas por "
 "unhas poucas décadas de paz. Durante estas guerras os ananos non deron "
 "expulsado aos elfos dos profundos bosques do sur, pero si consolidaron as "
 "súas posicións nos outeiros e montañas do norte do continente, coñecidas "
-"hoxe en día como as Terras Nórdicas. Dende entón construíron fantásticas "
+"hoxe en día como as Terras Nórdicas. Desde entón construíron fantásticas "
 "fortificacións e asentamentos na profundidade das montañas e penedos do seu "
 "territorio.\n"
 "\n"
@@ -5418,14 +5419,14 @@ msgstr ""
 "Non teñen inimigos naturais, aínda que a maioría deles, coma case toda as "
 "criaturas, sente unha repulsión instintiva polos non mortos. Os humanos son "
 "máis baixos que os elfos, pero máis altos que os ananos. A súa cor de pel "
-"pode variar, dende case branca a marrón escura.\n"
+"pode variar, desde case branca a marrón escura.\n"
 "\n"
 "<header>text='Súbditos da Coroa'</header>\n"
 "Existen moitos grupos diferentes de humanos, pero a maioría dos do Gran "
 "Continente viven baixo o dominio da Coroa de Wesnoth. Os humanos chegaron "
-"por vez primeira ao Gran Continente dende unhas terras do afastado oeste, "
+"por vez primeira ao Gran Continente desde unhas terras do afastado oeste, "
 "coñecidas como a Illa Verde, e non tardaron en establecer a súa capital "
-"nunha cidade no interior do continente que bautizaron co nome de Weldyn. Nos "
+"nunha cidade no interior do continente que bautizaron co nome de Güedin. Nos "
 "séculos posteriores construíron un gran número de cidades polo continente "
 "adiante. Os soldados da Coroa de Wesnoth protexen o país, constituíndo a "
 "forza militar máis organizada do mundo coñecido. Os seus guerreiros proveñen "
@@ -5442,7 +5443,7 @@ msgstr ""
 "caso, as provincias orientais non recrutan o seu exército do modo en que se "
 "fai no Wesnoth occidental. O adestramento para a loita é parte do modo de "
 "vida dos clans. Os pais apréndenlles aos nenos a montar cabalos, loitar e "
-"disparar co arco dende que son pequenos. En xeral, os guerreiros dos clans "
+"disparar co arco desde que son pequenos. En xeral, os guerreiros dos clans "
 "están menos organizados que os loitadores civilizados, e as fortalezas e "
 "debilidades destes grupos compleméntanse."
 
@@ -5837,10 +5838,10 @@ msgstr ""
 "habita no Gran Continente. Son grandes, lentos, pouco intelixentes, e teñen "
 "vidas extremadamente longas dentro das covas profundas ou na cima das altas "
 "montañas. A súa vitalidade interna caracteriza aos trolles e mantenos e "
-"sándaos dende dentro. Como resultado as súas vidas distínguense "
+"sándaos desde dentro. Como resultado as súas vidas distínguense "
 "completamente das das outras criaturas coñecidas. Os trolles teñen poucas "
 "necesidades reais: precisan pouca comida e auga, e polo tanto teñen poucos "
-"incentivos para perseguir máis aparte de protección contra os que lles son "
+"incentivos para perseguir aparte de protección contra os que lles son "
 "hostís. Isto significa que raramente teñen que preocuparse por nada e poden "
 "pasar moito tempo durmindo ou meditando. Os trolles teñen unha curiosa "
 "afinidade coa natureza. Non se relacionan cos seres vivos coma os elfos, "
@@ -5853,10 +5854,10 @@ msgstr ""
 "vida.\n"
 "\n"
 "Moitos ven aos trolles coma pouco máis que outra especie de monstros "
-"salvaxes. Este erro tan común perpetúano en parte orcos para convencer aos "
-"trolles para que se unan aos seus exércitos. Dado que son unha especie pouco "
-"intelixente e non entenden ás outras especies, ou ás veces nin son quen de "
-"distinguilas, as bandas de orcos poden convencelos facilmente de que "
+"salvaxes. Este erro tan común perpetúano en parte os orcos, para convencer "
+"aos trolles de que se unan aos seus exércitos. Dado que son unha especie "
+"pouco intelixente e non entenden ás outras especies, ou ás veces nin son "
+"quen de distinguilas, as bandas de orcos poden convencelos facilmente de que "
 "uníndose a elas poderán vingarse daqueles que outrora os cazaran. Estes "
 "novos recrutas son enviados entón a atacar a aqueles cos que os orcos están "
 "en conflito nese momento, fose ou non inimigo dos trolles, o que lles "
@@ -5865,7 +5866,7 @@ msgstr ""
 "ancestrais.\n"
 "\n"
 "<header>text='Xeografía'</header>\n"
-"Os trolles levan vivindo nas montañas do Gran Continente dende antes de que "
+"Os trolles levan vivindo nas montañas do Gran Continente desde antes de que "
 "os ananos emigrasen a elas. Os trolles son fáciles de atopar nas "
 "cordilleiras montañosas do norte e leste de Wesnoth, e onde queira que "
 "viaxen as hordas dos orcos."
@@ -6002,7 +6003,7 @@ msgstr "nivel"
 
 #: src/help.cpp:1376
 msgid "Advances from: "
-msgstr "Avanza dende: "
+msgstr "Avance de: "
 
 #: src/help.cpp:1378
 msgid "Advances to: "
