--- a/po/wesnoth-httt/gl.po
+++ b/po/wesnoth-httt/gl.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: wesnoth-httt\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-02-25 15:51+0100\n"
-"PO-Revision-Date: 2012-03-18 19:57+0100\n"
+"PO-Revision-Date: 2012-04-29 21:17+0200\n"
 "Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
@@ -2082,7 +2082,7 @@ msgstr ""
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/06_The_Siege_of_Elensefar.cfg:292
 msgid "Hmm... I have to consider this..."
-msgstr "Mmm… Teño que pensalo…"
+msgstr "Hm… Teño que pensalo…"
 
 #. [option]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/06_The_Siege_of_Elensefar.cfg:294
@@ -2110,7 +2110,7 @@ msgid ""
 "proper, we will see the sign and attack from the city’s northern gate."
 msgstr ""
 "Moi ben. Cando a bandeira vermella ondee sobre algún dos edificios da "
-"cidade, atacaremos dende a porta norte da cidade."
+"cidade, atacaremos desde a porta norte da cidade."
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/06_The_Siege_of_Elensefar.cfg:319
@@ -3251,7 +3251,7 @@ msgid ""
 msgstr ""
 "Reunín uns homes para loitar contra o traidor ao rei, e por suposto Axevier "
 "tamén, pois ela era a que movía todos os fíos. Atopámonos con eles, non "
-"aquí, senón no camiño dende Güedin, en Taz. Nós estabamos en desvantaxe "
+"aquí, senón no camiño desde Güedin, en Taz. Nós estabamos en desvantaxe "
 "numérica, pode que catro a un. En medio da batalla, o rapaz, parvo coma el "
 "só, cargou salvaxemente contra min. Non me quedou outra que acabar coa súa "
 "vida."
@@ -3474,7 +3474,7 @@ msgid ""
 "money. This land looks fertile enough. Surely we can settle here for the "
 "winter!"
 msgstr ""
-"Tivemos unha dura marcha dende que nos asaltaron os non mortos naquel "
+"Tivemos unha dura marcha desde que nos asaltaron os non mortos naquel "
 "maldito val. Agora o inverno bótasenos enriba, e xa gastamos case todo o "
 "ouro. Estas terras semellan fértiles dabondo. Seguro que podemos asentarnos "
 "aquí durante o inverno."
@@ -3851,7 +3851,7 @@ msgstr "…e que os orcos non nos sigan."
 #. [message]: speaker=unit
 #: data/campaigns/Heir_To_The_Throne/scenarios/13_The_Dwarven_Doors.cfg:467
 msgid "The doors are closed and barred from the inside!"
-msgstr "As portas están pechadas e trancadas dende dentro!"
+msgstr "As portas están pechadas e trancadas desde dentro!"
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/13_The_Dwarven_Doors.cfg:471
@@ -4296,7 +4296,7 @@ msgstr ""
 #. [message]: speaker=unit
 #: data/campaigns/Heir_To_The_Throne/scenarios/14_Plunging_Into_the_Darkness.cfg:686
 msgid "Hmm... there seems to be a secret passage behind these rocks!"
-msgstr "Mmm… parece haber un pasaxe secreto tras destas rochas!"
+msgstr "Hm… Parece haber un pasaxe secreto tras destas rochas!"
 
 #. [message]: speaker=unit
 #: data/campaigns/Heir_To_The_Throne/scenarios/14_Plunging_Into_the_Darkness.cfg:710
@@ -4972,7 +4972,7 @@ msgid ""
 "pulsating blue. The heat and light were comforting in the pitch-black."
 msgstr ""
 "O cetro, nun principio romo por mor das décadas de po e balor, comezou "
-"refulxir dende as chamas do lume rubí do seu interior. As runas ananas da "
+"refulxir desde as chamas do lume rubí do seu interior. As runas ananas da "
 "empuñadura dourada alumábanse cun azul latexante. Ambos lume e luz "
 "agradecíanse naquela total escuridade."
 
@@ -5461,8 +5461,8 @@ msgid ""
 msgstr ""
 "Os seus compañeiros mariscais… en fin, digamos que tardaron máis do normal "
 "en acudir ao chamado de Ila'alion cando se viu el só contra unha incursión "
-"de orcos. Disque se volvera moi arrogante dende que tiña a espada,  e ás "
-"veces a indignación é unha forza poderosa entre os elfos. Dende entón, non "
+"de orcos. Disque se volvera moi arrogante desde que tiña a espada,  e ás "
+"veces a indignación é unha forza poderosa entre os elfos. Desde entón, non "
 "se soubo nada da espada, quedou perdida nas terras dos orcos."
 
 #. [message]: speaker=Li'sar
@@ -6626,7 +6626,7 @@ msgid ""
 "marching full speed for the orcs’ camp, and vice-versa. These armies are out "
 "for blood."
 msgstr ""
-"Un momento, princesa. Mira, a penas podes velo dende aquí, pero os "
+"Un momento, princesa. Mira, a penas podes velo desde aquí, pero os "
 "exploradores de avanzada xa se toparon os uns cos outros. As tropas da raíña "
 "marchan a toda velocidade cara o campamento dos orcos, e viceversa. Os "
 "exércitos buscan sangue."
@@ -7215,7 +7215,7 @@ msgid ""
 "off guard."
 msgstr ""
 "Hai outro camiño polo que poderedes regresar a Wesnoth: a través das "
-"montañas dos dragóns e do val escuro.Chegade ás terras do leste, dende as "
+"montañas dos dragóns e do val escuro.Chegade ás terras do leste, desde as "
 "que poderedes volver a Wesnoth e sorprender á raíña das tebras, colléndoa "
 "desprevida."
 
@@ -7236,7 +7236,7 @@ msgid ""
 "there not another route we might take?"
 msgstr ""
 "Hai anos que non se ven dragóns por esas montañas, pero manteñen o nome "
-"dende tempos moi antigos. De todas formas, seguro que o camiño non está "
+"desde tempos moi antigos. De todas formas, seguro que o camiño non está "
 "falto de outros perigos. Hai algunha outra ruta que poidamos tomar?"
 
 #. [message]: speaker=Uradredia
