--- a/po/wesnoth-nr/gl.po
+++ b/po/wesnoth-nr/gl.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-21 01:34+0100\n"
-"PO-Revision-Date: 2012-04-14 06:14+0200\n"
+"PO-Revision-Date: 2012-04-29 21:19+0200\n"
 "Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
@@ -955,7 +955,7 @@ msgid ""
 "hordes of trolls and skeletons trying to find the dwarves... if there are "
 "any left."
 msgstr ""
-"Isto… hmm… é que agora mesmo estámosche algo ocupados loitando contra unhas "
+"Isto… Hm… é que agora mesmo estámosche algo ocupados loitando contra unhas "
 "hordas de trolles e esqueletos mentres intentamos atopar aos ananos… se é "
 "que queda algún."
 
@@ -967,7 +967,7 @@ msgstr "Hordas de trolles e esqueletos! Onde!? Vaiamos queimalos a todos!"
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/02_Infested_Caves.cfg:308
 msgid "Er... ok..."
-msgstr "Hmm… moi ben…"
+msgstr "Hm… moi ben…"
 
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/02_Infested_Caves.cfg:312
@@ -1642,7 +1642,7 @@ msgid ""
 "Hey, there goes our lunch! Hmmm, they are stronger then we thought, let’s go "
 "tell Master."
 msgstr ""
-"Eh, que se nos escapa o almorzo! Hmm, son máis fortes do que pensaramos, "
+"Eh, que se nos escapa o almorzo! Hm… Son máis fortes do que pensaramos, "
 "teremos que informar ao amo."
 
 #. [message]: role=Supporter
@@ -2649,7 +2649,7 @@ msgstr ""
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:1008
 msgid "Hmmm, it is pretty small, let’s see if we can make it bigger."
-msgstr "Mmm, é bastante pequeno, a ver se podemos arranxar iso."
+msgstr "Hm… É bastante pequeno, a ver se podemos arranxar iso."
 
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:1018
@@ -2826,7 +2826,7 @@ msgstr "Gran Cámara"
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:1495
 msgid "‘The Great Chamber’? Hmmm, wonder what that could be."
-msgstr "A «Gran Cámara»? Hmm… que haberá dentro?"
+msgstr "A «Gran Cámara»? Hm… Que haberá dentro?"
 
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:1513
@@ -3074,7 +3074,7 @@ msgstr "(<i>con cara de circunstancia</i>) Oh, a arriscada vida dun esqueleto."
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:1889
 msgid "A door, and a big, big lock, hmmm..."
-msgstr "Unha porta, e unha cerradura ben, ben grande, hmm…"
+msgstr "Unha porta, e unha cerradura ben, ben grande, hm…"
 
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:1893
@@ -3085,7 +3085,7 @@ msgstr "Síntoo, rapaces, é demasiada tentación."
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:1916
 msgid ""
 "Hmmm, this door sure is locked up pretty tight. I wonder what’s behind it."
-msgstr "Hmm… está ben pechada. Que haberá ao outro lado?"
+msgstr "Hm… Está ben pechada. Que haberá ao outro lado?"
 
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:1945
@@ -3181,7 +3181,7 @@ msgstr "Pois veña entón."
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2100
 msgid "Hmm, what is this thing?"
-msgstr "Hmm, que é esta cousa?"
+msgstr "Hm… Que é esta cousa?"
 
 #. [unit]: type=Wraith, id=Abhai
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2113
@@ -3345,7 +3345,7 @@ msgid ""
 "do not molest me here."
 msgstr ""
 "Exacto. Intentou dominarme e escravizarme, pero resistinme ao seu poder e "
-"fuxín. Levo agochado nestes túneles inundados dende entón. Nestas augas "
+"fuxín. Levo agochado nestes túneles inundados desde entón. Nestas augas "
 "habitan uns monstros aos que os súbditos de Malifor temen, así que non me "
 "molestan."
 
@@ -3452,7 +3452,7 @@ msgstr "Ah, cala xa. Vamos matalos."
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2423
 msgid "Hmmm, another door. Boy, is this one sure locked up."
-msgstr "Mmm… outra porta. Seguro que esta está pechada?"
+msgstr "Hm… Outra porta. Seguro que esta está pechada?"
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2427
@@ -3716,7 +3716,7 @@ msgstr "Ben, o que está claro é que <i>non</i> vai ser cunha folla."
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2930
 msgid "And look, he’s gone. Now we gotta find him all over again!"
-msgstr "E mira, marchou. Agora temos que volver atopalo dende cero!"
+msgstr "E mira, marchou. Agora temos que volver atopalo desde cero!"
 
 #. [message]: speaker=Malifor
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2937
@@ -5138,7 +5138,7 @@ msgstr "Agora non, pai. Estouche un pouco ocupado agora mesmo."
 msgid ""
 "Ro’Sothian! How are you doing, my old friend! Boy, you sure look... erm... "
 "different!"
-msgstr "Sodian! Como che vai, meu! Mi ma, estás bastante… hmm… cambiado!"
+msgstr "Sodian! Como che vai, meu! Mi ma, estás bastante… Hm… Cambiado!"
 
 #. [message]: id=Ro'Sothian
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:425
@@ -5812,7 +5812,7 @@ msgid ""
 "Hmmm, you aren’t as bad as I thought, Tallin. Unfortunately for you, we "
 "aren’t ready to give up just yet."
 msgstr ""
-"Hmm… Non es tan malo como pensara, Talin. Por desgraza para ti, aínda non "
+"Hm… Non es tan malo como pensara, Talin. Por desgraza para ti, aínda non "
 "estamos preparados para rendernos."
 
 #. [message]: speaker=narrator
@@ -6051,7 +6051,7 @@ msgid ""
 "wood-knot, I’d lay odds on Rakshas giving strict orders that she not be "
 "touched without his direct word on the matter."
 msgstr ""
-"Hmm… Estou contigho, rapás. Co estúpidos que son os orcos, seghuro que Raxas "
+"Hm… Estou contigho, rapás. Co estúpidos que son os orcos, seghuro que Raxas "
 "deu ordes explísitas de que non se tocase á prinsesa sen que el dese a orde "
 "en persoa."
 
@@ -6826,7 +6826,7 @@ msgid ""
 "plaything of a dragon. Tallin, we must retrieve it and bring peace to this "
 "land."
 msgstr ""
-"Un dragón. Hmm, a esas criaturas adoitan encantarlles os artefactos máxicos. "
+"Un dragón. Hm… A esas criaturas adoitan encantarlles os artefactos máxicos. "
 "Porén, a Vara da Xustiza é importante de máis para non ser máis que o "
 "xoguete dun dragón. Talin, debemos recuperala e devolver a paz a Irïdia."
 
@@ -8229,7 +8229,7 @@ msgid ""
 "Hmmm, he must have smelled the scent of other drakes and gone to them to "
 "convince them to help us."
 msgstr ""
-"Hmm, debeu cheirar aos outros draconiáns e foi convencelos de que nos "
+"Hm… Debeu cheirar aos outros draconiáns e foi convencelos de que nos "
 "axudasen."
 
 #. [message]: speaker=Sister Thera
@@ -8312,7 +8312,7 @@ msgstr ""
 #: data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg:896
 #: data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg:1023
 msgid "Hmmm, should we let the trolls run away or should we finish them now?"
-msgstr "Hmm, deixamos fuxir aos trolles ou acabamos con eles agora?"
+msgstr "Hm… Deixamos fuxir aos trolles ou acabamos con eles agora?"
 
 #. [option]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg:898
@@ -9397,7 +9397,7 @@ msgid ""
 "Eryssa and the remaining elves, eager to avenge Hidel, went south, while "
 "Tallin himself led the western group."
 msgstr ""
-"Erisa e o resto dos elfos, desexando vingar a Hidel, atacaron dende o sur, "
+"Erisa e o resto dos elfos, desexando vingar a Hidel, atacaron desde o sur, "
 "mentres que Talin en persoa liderou ao grupo oeste."
 
 #. [message]: speaker=narrator
@@ -10267,7 +10267,7 @@ msgid ""
 msgstr ""
 "Co tempo, restauráronse as cavernas de Neilga, converténdose así nun fogar "
 "próspero para moitos ananos. Baixo a protección da Alianza do Norte, todo "
-"tipo de criaturas comezaron a chegar, como fixeran noutros tempos, dende "
+"tipo de criaturas comezaron a chegar, como fixeran noutros tempos, desde "
 "todas as partes do mundo coñecido —e descoñecido— para comerciar cos ananos "
 "de Neilga."
 
@@ -10475,7 +10475,7 @@ msgstr ""
 #. [message]: role=Supporter
 #: data/campaigns/Northern_Rebirth/utils/herodeaths.cfg:308
 msgid "Um... Father? Your wife just got killed..."
-msgstr "Hmm… Pai? Acaban de asasinar á túa esposa…"
+msgstr "Hm… Pai? Acaban de asasinar á túa esposa…"
 
 #. [message]: speaker=Father Morvin
 #: data/campaigns/Northern_Rebirth/utils/herodeaths.cfg:312
