--- a/po/wesnoth-sof/gl.po
+++ b/po/wesnoth-sof/gl.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-12-15 10:39+0100\n"
-"PO-Revision-Date: 2012-04-29 17:10+0200\n"
+"PO-Revision-Date: 2012-04-29 21:19+0200\n"
 "Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
@@ -1645,7 +1645,7 @@ msgid ""
 "Hm... a most interesting jewel. I can feel its magical power. I will start "
 "drawing up plans for the sceptre immediately."
 msgstr ""
-"Hmm… unha xoia moi interesante. Podo sentir o seu poder máxico sen esforso. "
+"Hm… Unha xoia moi interesante. Podo sentir o seu poder máxico sen esforso. "
 "Comesarei a faser os planos para o setro inmediatamente."
 
 #. [message]: speaker=Thursagan
@@ -2026,7 +2026,7 @@ msgstr "Que opinas da xoia, Denghali?"
 #. [message]: speaker=Theganli
 #: data/campaigns/Sceptre_of_Fire/scenarios/4t_The_Jeweler.cfg:210
 msgid "Uh, um, yes, yes, very impressive jewel, impressive, yes..."
-msgstr "Hmm… Impresionante, moi impresionante, si señor."
+msgstr "Hm… Impresionante, moi impresionante, si señor."
 
 #. [message]: speaker=Thursagan
 #: data/campaigns/Sceptre_of_Fire/scenarios/4t_The_Jeweler.cfg:214
@@ -2081,7 +2081,7 @@ msgstr ""
 msgid ""
 "Well... maybe... the Shorbear clan? They have good tools... yes, yes, they "
 "do..."
-msgstr "Hmm… ao mellor… o clan Barbacurta? Teñen boas ferramentas…moi boas…"
+msgstr "Hm… Ao mellor… O clan Barbacurta? Teñen boas ferramentas… Moi boas…"
 
 #. [message]: speaker=Rugnur
 #: data/campaigns/Sceptre_of_Fire/scenarios/4t_The_Jeweler.cfg:248
@@ -3526,7 +3526,7 @@ msgstr "Mata a todos os elfos antes de que algún deles fuxa das covas."
 #. "Hmmm, me leave now!"
 #: data/campaigns/Sceptre_of_Fire/scenarios/9_Caverns_of_Flame.cfg:927
 msgid "Hm... Me le’ no’w!"
-msgstr "Hmm… Orak dee maarchr!"
+msgstr "Hm… Orak dee maarchr!"
 
 #. [scenario]: id=Epilogue
 #: data/campaigns/Sceptre_of_Fire/scenarios/Epilogue.cfg:3
