--- a/po/wesnoth-units/gl.po
+++ b/po/wesnoth-units/gl.po
@@ -11,15 +11,14 @@
 # Marce Villarino <mvillarino AT users DOT sourceforge DOT net>, 2008.
 # Adrián Chaves Fernández <adriyetichaves@gmail.com>, 2010.
 # Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail.com>, 2010, 2011.
-# Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail.com>, 2011.
+# Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail.com>, 2011, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-12-15 10:39+0100\n"
-"PO-Revision-Date: 2011-11-09 21:37+0100\n"
-"Last-Translator: Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail."
-"com>\n"
+"POT-Creation-Date: 2012-04-07 12:15+0200\n"
+"PO-Revision-Date: 2012-04-29 19:46+0200\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
@@ -28,8 +27,9 @@ msgstr ""
 "com>\n"
 "com>\n"
 "com>\n"
+"com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 1.2\n"
+"X-Generator: Lokalize 1.4\n"
 
 #. [unit_type]: id=Dwarvish Dragonguard, race=dwarf
 #. [unit_type]: id=Dwarvish Masked Dragonguard, race=dwarf
@@ -257,7 +257,7 @@ msgid ""
 "made more so by the secrecy which dwarves wrap about their workings."
 msgstr ""
 "Cando os humanos de Wesnoth atoparon por vez primeira aos ananos, quedaron "
-"pampos co poder dos seus arcabuceiros, capaces de provocar a morte dende moi "
+"pampos co poder dos seus arcabuceiros, capaces de provocar a morte desde moi "
 "lonxe mediante uns estraños paus que levaban á batalla. O enxordecedor ruído "
 "destes “arcabuces” xa resulta bastante terrorífico de por si, pero o segredo "
 "que os ananos gardan sobre as súas obras o empeora."
@@ -1240,7 +1240,7 @@ msgid ""
 "recruits."
 msgstr ""
 "Os elfos sempre gozaron dunha gran reputación coma arqueiros, unha "
-"habilidade que por diversas razóns lles ven dada dende que nacen. Ata os "
+"habilidade que por diversas razóns lles ven dada desde que nacen. Ata os "
 "máis febles poden resultar letais cun arco nas mans, e en tempos de guerra é "
 "a arma preferida por moitos. A pesar de que a súa relativa falta de "
 "experiencia no combate os fai algo vulnerábeis, a súa gracia natural "
@@ -2093,7 +2093,7 @@ msgstr ""
 "Os amestradores de grifóns teñen unha gran experiencia de voo cos grifóns, "
 "ata o punto de que montura e xinete parecen un só. Esta relación especial "
 "conforma o núcleo do profundo estremecemento, polo que estas poderosas aves "
-"predadoras poden golpear dende calquera parte."
+"predadoras poden golpear desde calquera parte."
 
 # Gryphon Rider=xinete de grifón FIXADO
 #. [unit_type]: id=Gryphon Rider, race=gryphon
@@ -2261,7 +2261,7 @@ msgid ""
 "provide inviting targets."
 msgstr ""
 "Chegados a miúdo das rexións máis salvaxes e remotas de Wesnoth, os homes a "
-"cabalo adestran dende cativos para cabalgar e seguir un estrito código de "
+"cabalo adestran desde cativos para cabalgar e seguir un estrito código de "
 "honor. As súas cargas son potentes, aínda que resultan unha táctica "
 "perigosa, tal e como sempre se demostrou no campo de batalla. Os homes a "
 "cabalo son moi efectivos contra a maior parte da infantería, sobre todo "
@@ -2284,9 +2284,9 @@ msgid ""
 "woodsmen, military bowmen are trained to competence with both a bow and a "
 "short sword, and are very common on the battlefield."
 msgstr ""
-"O tiro con arco leva utilizándose para cousas outras que a caza dende a súa "
-"orixe, e os arqueiros levan sendo indispensábeis para a guerra dende tempos "
-"inmemoriais. Xeralmente de orixe humilde —dende labregos a homes dos bosques"
+"O tiro con arco leva utilizándose para cousas outras que a caza desde a súa "
+"orixe, e os arqueiros levan sendo indispensábeis para a guerra desde tempos "
+"inmemoriais. Xeralmente de orixe humilde —desde labregos a homes dos bosques"
 "— os arqueiros adestran para ser competentes tanto no tiro con arco coma coa "
 "espada curta, e adoitan utilizarse en gran número no campo de batalla."
 
@@ -3463,7 +3463,7 @@ msgid ""
 "their feet, and good with knives. They happily employ less-than-honorable "
 "tactics in combat, seeing little merit in a ‘fair fight’."
 msgstr ""
-"Dende sempre, os membros dos múltiples “gremios” de rateiros que xorden en "
+"Desde sempre, os membros dos múltiples “gremios” de rateiros que xorden en "
 "calquera cidade grande tiveron a curiosa manía de aclarar o pelo con cal ata "
 "que comeza ter cor azul. Facelo é ousado, xa que a súa profesión a miúdo "
 "obrígaos a facer cousas non precisamente legais. Os ladróns teñen moitas "
@@ -5636,11 +5636,11 @@ msgid ""
 "\n"
 "That is a question which is easily answered by a necromancer."
 msgstr ""
-"Cando a luz chegou ao mundo e lle deu forma ao descoñecido, obrigou ao medo "
-"a retirarse á escuridade. Dende aquel día, as sombras do mundo conservaron o "
+"Cando a luz chegou a Irïdia e lle deu forma ao descoñecido, obrigou ao medo "
+"a retirarse á escuridade. Desde aquel día, as sombras do mundo conservaron o "
 "terror para os humanos, aínda que non se sabe por que.\n"
 "\n"
-"Esta é unha pregunta que un nigromante pode responder de forma sinxela."
+"Esta é unha pregunta que todo nigromante pode responder."
 
 # Spectre=espectro FIXADO
 #. [unit_type]: id=Spectre, race=undead
