--- a/po/wesnoth/gl.po
+++ b/po/wesnoth/gl.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-04-01 10:13+0200\n"
+"PO-Revision-Date: 2012-05-01 19:25+0200\n"
 "Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
@@ -2870,7 +2870,7 @@ msgid ""
 "make room for you on their keep so you can recruit from there, and you can "
 "even capture an enemy’s keep and use that."
 msgstr ""
-"Os <i>líderes</i> poden recrutar e reincorporar unidades dende calquera "
+"Os <i>líderes</i> poden recrutar e reincorporar unidades desde calquera "
 "torre de castelo, non só desde a torre na que comezan. Pode que ás veces os "
 "teus aliados estean dispostos a cederche a súa torre para que recrutes nela, "
 "ou podes capturar a torre dun inimigo e facer uso dela."
@@ -5232,31 +5232,31 @@ msgstr "solicitando información do usuario $nick|."
 #: src/menu_events.cpp:3114
 msgid "Couldn't find label or unit containing the string '$search'."
 msgstr ""
-"Non se puido atopar ningunha etiqueta nin unidade que conteña o texto "
+"non se puido atopar ningunha etiqueta nin unidade que conteña o texto "
 "«$search|»."
 
 # droid???
 #: src/menu_events.cpp:3148
 msgid "Can't droid invalid side: '$side'."
 msgstr ""
-"A intelixencia artificial non pode controlar o bando «$side|» (non é "
+"a intelixencia artificial non pode controlar o bando «$side|» (non é "
 "correcto)."
 
 # droid???
 #: src/menu_events.cpp:3153
 msgid "Can't droid networked side: '$side'."
 msgstr ""
-"A intelixencia artificial non pode controlar o bando «$side|» (é un bando da "
+"a intelixencia artificial non pode controlar o bando «$side|» (é un bando da "
 "rede)."
 
 #: src/menu_events.cpp:3191
 msgid "Can't change control of invalid side: '$side'."
-msgstr "Non se puido cambiar o control do bando «$side» (non é válido)."
+msgstr "non se puido cambiar o control do bando «$side» (non é válido)."
 
 #: src/menu_events.cpp:3197
 msgid "Can't change control of out-of-bounds side: '$side'."
 msgstr ""
-"Non se puido cambiar o control do bando «$side» (está fóra dos límites)."
+"non se puido cambiar o control do bando «$side» (está fóra dos límites)."
 
 #: src/menu_events.cpp:3311
 msgid "Layers"
