--- a/po/wesnoth-editor/gl.po
+++ b/po/wesnoth-editor/gl.po
@@ -7,23 +7,23 @@
 #
 # Leandro Regueiro <leandro.regueiro@gmail.com>, 2007, 2008, 2010.
 # Adrián Chaves Fernández <adriyetichaves@gmail.com>, 2010.
-# Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail.com>, 2011.
+# Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail.com>, 2011, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-03 10:40+0100\n"
-"PO-Revision-Date: 2011-11-01 17:19+0100\n"
-"Last-Translator: Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail."
-"com>\n"
+"POT-Creation-Date: 2012-04-07 12:14+0200\n"
+"PO-Revision-Date: 2012-05-03 20:50+0200\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "com>\n"
+"com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 1.2\n"
+"X-Generator: Lokalize 1.4\n"
 
 #. [brush]
 #: data/core/editor/brushes.cfg:5
@@ -211,7 +211,7 @@ msgid ""
 "Do you really want to quit? Changes in the map since the last save will be "
 "lost."
 msgstr ""
-"Seguro que queres saír? Hanse perder os cambios realizados no mapa dende a "
+"Seguro que queres saír? Hanse perder os cambios realizados no mapa desde a "
 "última vez que se gardou."
 
 #: src/editor/editor_controller.cpp:321
@@ -220,7 +220,7 @@ msgid ""
 "since the last save will be lost:"
 msgstr ""
 "Seguro que queres saír? Estes mapas modificáronse e hanse perder todos os "
-"cambios realizados dende a última vez que se gardaron:"
+"cambios realizados desde a última vez que se gardaron:"
 
 #: src/editor/editor_controller.cpp:326
 msgid "Quit"
@@ -234,7 +234,7 @@ msgstr "Non se atopou o momento do día do editor."
 msgid ""
 "Do you want to discard all changes you made to the map since the last save?"
 msgstr ""
-"Queres desbotar todos os cambios que fixeches no mapa dende a última vez que "
+"Queres desbotar todos os cambios que fixeches no mapa desde a última vez que "
 "o gardaches?"
 
 #: src/editor/editor_controller.cpp:412
@@ -291,7 +291,7 @@ msgstr "Cargáronse os datos integrados no mapa"
 
 #: src/editor/editor_controller.cpp:719 src/editor/editor_controller.cpp:733
 msgid "Map loaded from scenario"
-msgstr "Mapa cargado dende o escenario"
+msgstr "Mapa cargado desde o escenario"
 
 #: src/editor/editor_controller.cpp:729
 msgid ""
