--- a/po/wesnoth-ei/gl.po
+++ b/po/wesnoth-ei/gl.po
@@ -9,15 +9,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-02-25 15:51+0100\n"
-"PO-Revision-Date: 2012-02-26 09:17+0100\n"
-"Last-Translator: Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail."
-"com>\n"
+"POT-Creation-Date: 2012-04-07 12:14+0200\n"
+"PO-Revision-Date: 2012-04-29 21:13+0200\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "com>\n"
 "com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -439,7 +439,7 @@ msgid ""
 "Hm. I do not sense anything out of the ordinary here. My scouts must have "
 "deceived me. Very well; destroy them."
 msgstr ""
-"Hmm… Non percibo nada especial neste lugar. Os exploradores deberon "
+"Hm… Non percibo nada especial neste lugar. Os exploradores deberon "
 "enganarme. En fin, acabade con eses humanos."
 
 # arconte????
@@ -1161,7 +1161,7 @@ msgstr ""
 #: data/campaigns/Eastern_Invasion/scenarios/12_Evacuation.cfg:248
 #: data/campaigns/Eastern_Invasion/scenarios/16_Weldyn_under_Attack.cfg:314
 msgid "Hmm..."
-msgstr "Mmm…"
+msgstr "Hm…"
 
 #. [option]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/04b_The_Undead_Border_Patrol.cfg:169
@@ -1695,7 +1695,7 @@ msgid ""
 "Hmm... I know. We will make a pact to destroy these men, and continue our "
 "fight later. "
 msgstr ""
-"Mmm… Gústame a idea. Pactemos entón a paz ata que acabemos cos intrusos "
+"Hm… Gústame a idea. Pactemos entón a paz ata que acabemos cos intrusos "
 "humanos. "
 
 #. [message]: speaker=Wak-Rano
