--- a/po/wesnoth-manpages/gl.po
+++ b/po/wesnoth-manpages/gl.po
@@ -12,19 +12,19 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "POT-Creation-Date: 2012-01-06 12:00+0100\n"
-"PO-Revision-Date: 2012-01-06 14:12+0100\n"
-"Last-Translator: Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail."
-"com>\n"
+"PO-Revision-Date: 2012-04-29 19:36+0200\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
-"Language: \n"
+"Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "com>\n"
 "com>\n"
 "com>\n"
+"com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 1.2\n"
+"X-Generator: Lokalize 1.4\n"
 
 # type: TH
 #. type: TH
@@ -1267,7 +1267,7 @@ msgid ""
 "The number of allowed connections from the same IP. B<0> means infinite. "
 "(default: B<5>)"
 msgstr ""
-"O número de conexións permitidas dende un mesmo enderezo IP. B<0> equivale a "
+"O número de conexións permitidas desde un mesmo enderezo IP. B<0> equivale a "
 "infinitas. O valor predeterminado é B<5>."
 
 # type: TP
@@ -1307,7 +1307,7 @@ msgid ""
 "B</var/run/socket/wesnothd/socket>)."
 msgstr ""
 "A ruta ao fifo polo que se poden enviar ordes ao servidor —equivalente ao “/"
-"query …” dende o wesnoth—. Se non se especifica outra cousa, toma a ruta "
+"query …” desde o wesnoth—. Se non se especifica outra cousa, toma a ruta "
 "indicada como valor predeterminado durante a compilación (en principio B</"
 "var/run/socket/wesnothd/socket>)."
 
